Profiles for GUI tests and WS tests